WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89986
HTMLStyleElement::removedFrom seems incorrect.
https://bugs.webkit.org/show_bug.cgi?id=89986
Summary
HTMLStyleElement::removedFrom seems incorrect.
Shinya Kawanaka
Reported
2012-06-26 09:31:30 PDT
A bug similar to
Bug 88495
contains.
Attachments
Patch
(3.50 KB, patch)
2012-06-26 11:10 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-04
(562.57 KB, application/zip)
2012-06-26 12:23 PDT
,
WebKit Review Bot
no flags
Details
Patch
(2.03 KB, patch)
2012-06-26 15:19 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-06-26 09:34:01 PDT
Element::removedFrom has the same thing. Why taking the treeScope of parent? I believe node->treeScope() and parentNode()->treeScope() should be the same unless parentNode() does not exist...
Shinya Kawanaka
Comment 2
2012-06-26 10:37:26 PDT
It seems HTMLElement::removedFrom has similar pattern. I'm not sure we can remove it, but let me try.
Shinya Kawanaka
Comment 3
2012-06-26 10:48:47 PDT
Sorry, not HTMLElement but Element.
Shinya Kawanaka
Comment 4
2012-06-26 11:10:15 PDT
Created
attachment 149566
[details]
Patch
Shinya Kawanaka
Comment 5
2012-06-26 11:11:07 PDT
let me try to use EWS to check this patch does not degrade any tests...
WebKit Review Bot
Comment 6
2012-06-26 12:23:37 PDT
Comment on
attachment 149566
[details]
Patch
Attachment 149566
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13102466
New failing tests: fast/dom/shadow/get-element-by-id-in-shadow-mutation.html
WebKit Review Bot
Comment 7
2012-06-26 12:23:44 PDT
Created
attachment 149585
[details]
Archive of layout-test-results from ec2-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Shinya Kawanaka
Comment 8
2012-06-26 14:15:28 PDT
(In reply to
comment #7
)
> Created an attachment (id=149585) [details] > Archive of layout-test-results from ec2-cr-linux-04 > > The attached test failures were seen while running run-webkit-tests on the chromium-ews. > Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Oops...
Shinya Kawanaka
Comment 9
2012-06-26 14:49:28 PDT
By the way, why don't we just take insertionPoint->treeScope() only? Let me try to do it.
Shinya Kawanaka
Comment 10
2012-06-26 15:16:03 PDT
Ah, Element::removedFrom maybe seems OK, because it gets treeScope() and does not get shadowRoot().
Shinya Kawanaka
Comment 11
2012-06-26 15:19:48 PDT
Created
attachment 149614
[details]
Patch
WebKit Review Bot
Comment 12
2012-06-27 08:18:24 PDT
Comment on
attachment 149614
[details]
Patch Clearing flags on attachment: 149614 Committed
r121344
: <
http://trac.webkit.org/changeset/121344
>
WebKit Review Bot
Comment 13
2012-06-27 08:18:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug