HTMLStyleElement::removedFrom seems incorrect. https://bugs.webkit.org/show_bug.cgi?id=89986

Reviewed by Hajime Morita.

This is a follow-up patch for Bug 88495. The Same bug as Bug 88495 seems to exist on
HTMLStyleElement::removedFrom().

No new tests, hard to write a test case.

* html/HTMLStyleElement.cpp:
(WebCore::HTMLStyleElement::removedFrom):


Canonical link: https://commits.webkit.org/107913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121344 268f45cc-cd09-0410-ab3c-d52691b4dbfc